--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 
 
     <link rel="stylesheet" type="text/css" href="/css/style.css">
-    <link rel="icon" type="image/x-icon" href="/img/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Maple Street Waffles</title>
     <base href="/">
@@ -23,7 +22,7 @@
     <div id="main" ng-style="mainStyle">
         <div id="header">
             <div id="stamp"></div> <!-- THIS WILL BE AN <img /> WHEN WE GET IT -->
-            <h2 id="header_title" ui-sref="home">LONG LOGO HERE</h2>
+            <h2 id="header_title" ui-sref="home">MAPLE STREET WAFFLES</h2>
             <h3 class="header_link" ui-sref="about">ABOUT</h3>
             <h3 class="header_link" ui-sref="products">PRODUCTS</h3>
             <h3 class="header_link" ui-sref="recipes">RECIPES</h3>
