--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 
     <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <link rel="stylesheet" type="text/css" href="/css/mobile.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Maple Street Waffles</title>
     <base href="/">
@@ -25,7 +26,7 @@
             <h2 id="header_title" ui-sref="home">MAPLE STREET WAFFLES</h2>
             <h3 class="header_link" ui-sref="about">ABOUT</h3>
             <h3 class="header_link" ui-sref="products">PRODUCTS</h3>
-            <h3 class="header_link" ui-sref="recipes">RECIPES</h3>
+            <!--h3 class="header_link" ui-sref="recipes">RECIPES</h3-->
         </div>
         <div ui-view ></div>
     </div>
